--- a/src/components/UI/Modal/Modal.scss
+++ b/src/components/UI/Modal/Modal.scss
@@ -1,6 +1,7 @@
 @import '../../../assets/scss/settings.scss';
 
 .Modal {
+    font-size: 1.8rem;
     position: fixed;
     z-index: 9;
     background-color: white;
