--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.scss
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.scss
@@ -1,21 +1,40 @@
+@import '../../../../assets/scss/settings.scss';
+
 .NavigationItem {
-    margin: 0;
-    display: flex;
-    align-items: center;
-    height: 100%;
+    margin: 1rem 0;
+    display: block;
+    width: 100%;
+
+    @include breakpoint(desktop) {
+        margin: 0;
+        display: flex;
+        height: 100%;
+        width: auto;
+        align-items: center;
+    }
 
     > a {
+        @include fontSizeRem(16, 16)
         text-decoration: none;
-        color: white;
-        height: 100%;
-        padding: 1.6rem 1rem;
-        border-bottom: 4px solid transparent;
+        color: #8f5c2c;
+        width: 100%;
         display: block;
 
-        &:hover, &:active, &.is-active {
-            background-color: #8f5c2c;
-            border-bottom: 4px solid #40a4c8;
+        @include breakpoint(desktop) {
             color: white;
+            height: 100%;
+            padding: 1.6rem 1rem;
+            border-bottom: 4px solid transparent;
+        }
+
+        &:hover, &:active, &.is-active {
+            color: #40a4c8;
+
+            @include breakpoint(desktop) {
+                background-color: #8f5c2c;
+                border-bottom: 4px solid #40a4c8;
+                color: white;
+            }
         }
     }
 }
