--- a/src/components/Burger/BuildControls/BuildControls.scss
+++ b/src/components/Burger/BuildControls/BuildControls.scss
@@ -1,6 +1,7 @@
 .BuildControls {
     font-size: 1.4rem;
     width: 100%;
+    height: 45%;
     background-color: #cf8f2e;
     display: flex;
     flex-flow: column;
