--- a/src/components/UI/Button/Button.scss
+++ b/src/components/UI/Button/Button.scss
@@ -8,11 +8,11 @@
     padding: 1rem;
     margin: 1rem;
     font-weight: bold;
-}
 
-.Button:first-of-type {
-    margin-left: 0;
-    padding-left: 0;
+    &:first-of-type {
+        margin-left: 0;
+        padding-left: 0;
+    }
 }
 
 .Success {
